test/ci/back-end/fail/fpu_fail.rav
field f: Int

proc p(x:Ref, v:Int)
  requires own(x.f, v, 0.75)

{
  fpu(x, f, 4);
}